@startuml
class AgentPlatform

class Agent
class SensorAgent
class ExampleSensorAgent

class AID
class Envelope
Class AclMessage

class MessageDispatcher
class MessageParser

class Sensor
class TempSensor

class TcpSocket

Agent <-- SensorAgent
Agent o-- AID
Agent o-- AclMessage
SensorAgent <-- ExampleSensorAgent
AgentPlatform *-- Agent
ExampleSensorAgent *-- TempSensor

MessageDispatcher *-- TcpSocket
MessageDispatcher o-- Envelope
MessageDispatcher o-- AclMessage
AclMessage o-- Envelope
AclMessage o-- AID
Envelope o-- AID

Sensor <-- TempSensor
TcpSocket *-- MessageParser
TcpSocket o-- AclMessage

@enduml
